Blocked People and Report events and people

--- a/InvMe/InvMe.iOS/InvMe.iOS.csproj
+++ b/InvMe/InvMe.iOS/InvMe.iOS.csproj
@@ -338,4 +338,7 @@
   <ItemGroup>
     <BundleResource Include="Resources\eventdatecalendar.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\more.png" />
+  </ItemGroup>
 </Project>
