--- a/InvMe/InvMe.Android/InvMe.Android.csproj
+++ b/InvMe/InvMe.Android/InvMe.Android.csproj
@@ -241,5 +241,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\icon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\more.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
