--- a/InvMe/InvMe.iOS/Info.plist
+++ b/InvMe/InvMe.iOS/Info.plist
@@ -22,7 +22,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>InvMe</string>
 	<key>CFBundleVersion</key>
-	<string>9.0</string>
+	<string>12.0</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
@@ -40,13 +40,13 @@
 	<key>NSCalendarsUsageDescription</key>
 	<string>This app needs access to calendars.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Can we use your location at all times?</string>
+	<string>Your current location will be displayed on the map and will be not store.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Can we use your location when your app is being used?</string>
+	<string>Your current location will be displayed on the map and will be not store.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Can we use your location at all times?</string>
+	<string>Your current location will be displayed on the map and will be not store.</string>
 	<key>CFBundleShortVersionString</key>
-	<string>9</string>
+	<string>12</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.officialdoniald.invme</string>
 	<key>UIBackgroundModes</key>
