--- a/InvMe/InvMe.Android/Properties/AndroidManifest.xml
+++ b/InvMe/InvMe.Android/Properties/AndroidManifest.xml
@@ -9,7 +9,7 @@
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="InvMe!">
+	<application android:label="InvMe!" android:largeHeap="true">
 		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyCzO9DoInidOdajHDjcfSL0LgF-EtgrA2o" />
 	</application>
 </manifest>
