--- a/InvMe/InvMe.iOS/InvMe.iOS.csproj
+++ b/InvMe/InvMe.iOS/InvMe.iOS.csproj
@@ -175,6 +175,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.1</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.Permissions">
+      <Version>3.0.0.12</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>4.0.0.190-beta</Version>
     </PackageReference>
