--- a/InvMe/InvMe.Android/InvMe.Android.csproj
+++ b/InvMe/InvMe.Android/InvMe.Android.csproj
@@ -186,5 +186,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\xamarin.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\loginbackground.jpeg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
