--- a/InvMe/InvMe.Android/Properties/AndroidManifest.xml
+++ b/InvMe/InvMe.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="4" android:versionName="4.0" package="com.officialdoniald.invme" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="26" />
+	<uses-sdk android:minSdkVersion="27" android:targetSdkVersion="28" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -9,7 +9,8 @@
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="InvMe!" android:largeHeap="true">
-		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyCzO9DoInidOdajHDjcfSL0LgF-EtgrA2o" />
+	<application android:label="InvMe!" android:largeHeap="true" android:allowBackup="false">
+		<meta-data android:name="com.google.android.maps.v2.API_KEY" 
+               android:value="AIzaSyCzO9DoInidOdajHDjcfSL0LgF-EtgrA2o" />
 	</application>
 </manifest>
