--- a/InvMe/InvMe.iOS/Info.plist
+++ b/InvMe/InvMe.iOS/Info.plist
@@ -40,11 +40,11 @@
 	<key>NSCalendarsUsageDescription</key>
 	<string>This app needs access to calendars.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Your current location will be displayed on the map (locally) and will be not store.</string>
+	<string>Your current location will be displayed on the map (locally) and will be not store or shared.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Your current location will be displayed on the map (locally) and will be not store.</string>
+	<string>Your current location will be displayed on the map (locally) and will be not store or shared.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Your current location will be displayed on the map (locally) and will be not store.</string>
+	<string>Your current location will be displayed on the map (locally) and will be not store or shared.</string>
 	<key>CFBundleShortVersionString</key>
 	<string>14</string>
 	<key>CFBundleIdentifier</key>
