--- a/InvMe/InvMe.Android/Properties/AndroidManifest.xml
+++ b/InvMe/InvMe.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="4" android:versionName="4.0" package="com.officialdoniald.invme" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="20" android:versionName="1.0.20" package="com.officialdoniald.invme" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="27" android:targetSdkVersion="28" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -10,7 +10,6 @@
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<application android:label="InvMe!" android:largeHeap="true" android:allowBackup="false" android:usesCleartextTraffic="true">
-		<meta-data android:name="com.google.android.maps.v2.API_KEY" 
-               android:value="AIzaSyCzO9DoInidOdajHDjcfSL0LgF-EtgrA2o" />
+		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyCzO9DoInidOdajHDjcfSL0LgF-EtgrA2o" />
 	</application>
 </manifest>
