Some UI upgrade.

--- a/InvMe/InvMe.iOS/InvMe.iOS.csproj
+++ b/InvMe/InvMe.iOS/InvMe.iOS.csproj
@@ -112,6 +112,7 @@
     <AppExtensionDebugBundleId />
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CustomRenderers\CustomEditorRenderer.cs" />
     <Compile Include="CustomRenderers\CustomEntryRenderer.cs" />
     <Compile Include="CustomRenderers\ExtendedViewCellRenderer.cs" />
     <Compile Include="Main.cs" />
