--- a/InvMe/InvMe.iOS/Info.plist
+++ b/InvMe/InvMe.iOS/Info.plist
@@ -22,7 +22,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>InvMe</string>
 	<key>CFBundleVersion</key>
-	<string>1.0.23</string>
+	<string>1.0.33</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
@@ -46,10 +46,19 @@
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Your current location will be displayed on the map (locally) and will be not store or shared.</string>
 	<key>CFBundleShortVersionString</key>
-	<string>23</string>
+	<string>33</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.officialdoniald.invme</string>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
